2004-05-15  ynakai@redhat.com

	* doc/about.sgml: use 0777 permissions instead of 0x777 in sample code

2004-05-15  Morten Welinder  <mortenw@gnome.org>

	* configure.in: fix ngettext detection on Solaris and AIX

2004-05-15  Michael Wilson <Michael.Wilson@bull.net>

	* libgnomevfs/xdgmimeglob.h: removed unnecessary comma at the end of
	  an enum

2004-05-11  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Include sys/param.h when looking for statfs(). Fixes FreeBSD build.
	Patch from Joe Marcus Clarke
	
2004-04-20  Christophe Fergeau  <teuf@gnome.org>

	* modules/sftp-method.c: fix method error reporting, return
	HOST_NOT_FOUND when trying to use the method with an empty host name.

2004-04-20  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	Post release version bump

=== gnome-vfs 2.6.1.1 ===
	
2004-04-20  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Fix binary version for 2.6.1
	Change version to 2.6.1.1

2004-04-19  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	Post release version bump

=== gnome-vfs 2.6.1 ===
	
2004-04-19  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for 2.6.1

2004-04-16  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* libgnomevfs/gnome-vfs-utils.c: (gnome_vfs_get_volume_free_space):
	Better statfs portability (#136468)

2004-04-16  Alexander Larsson  <alexl@redhat.com>

	Patch from Ondrej Sury
	
	* acconfig.h:
	* configure.in:
	* libgnomevfs/gnome-vfs-ssl.c: (gnome_vfs_ssl_create_from_fd),
	(gnome_vfs_ssl_destroy):
	Work with gnutls 1.0 and older versions.
	
2004-04-15 Joe Marcus Clarke <marcus@FreeBSD.org>

	* configure.in:
	Add check for the posix_openpt() function (similar to getpt).

	* modules/pty-open.c: (_gnome_vfs_pty_getpt)
	Try to use posix_openpt() to get our master pty.

	* modules/sftp-mthod.c:
	Define TEMP_FAILURE_RETRY if it is not already defined.  Note: this is a
	GNU'ism, and not very portable.  A better solution might need to be found.
